feat: Add new experience entries, enhance Decap CMS configuration, integrate analytics, and update metadata.

--- a/content/education/2024-kku.md
+++ b/content/education/2024-kku.md
@@ -1,7 +1,12 @@
 ---
-degree: "Bachelor of Science in Computer Science"
-school: "Khon Kaen University"
-period: "2020 - 2024"
+period: 2020 - 2024
+degree: Bachelor's Degree
+major: Computer and Information Science
+school: Khon Kaen University
+startDate: Jul 2020
+endDate: Apr 2024
+honors: First Class Honors
+gpa: 3.68
+socialActivity: "* Library Club, Yoka, Swimming and Basketball Team"
 ---
-Major in Computer Science.
-GPA: 3.50
+* **Social Activity:** Private Teacher (Math & Programming), Library, Yoga, Swimming and Basketball Team
