--- a/content/experience/2024-06-01-botnoi.md
+++ b/content/experience/2024-06-01-botnoi.md
@@ -1,14 +1,42 @@
 ---
-title: "Software Engineer"
-company: "BOTNOI GROUP"
-location: "Bangkok, Thailand"
-startDate: "2024-06-01"
-endDate: "Present"
+title: Mobile Application Developer
+company: IBOTNOI COMPANY LIMITED
+location: Bangkok, Thailand
+startDate: Jun 2024
+current: true
+endDate: ""
 links:
-  - label: "Apple App Store"
-    url: "https://apps.apple.com/th/app/botnoi-voice-text-to-speech/id6670564712"
-  - label: "Google Play Store"
-    url: "https://play.google.com/store/apps/details?id=com.mobile.botnoivoice&pcampaignid=web_share"
+  - label: Apple App Store
+    url: https://apps.apple.com/th/app/botnoi-voice-text-to-speech/id6670564712
+  - label: Google Play Store
+    url: https://play.google.com/store/apps/details?id=com.mobile.botnoivoice&pcampaignid=web_share
 ---
-Flutter & Dart for Mobile Application Development.
-Responsible for maintaining and developing new features for Botnoi Voice application.
+• Developed iOS and Android apps using Flutter on a single codebase.
+
+• Built the full app from design to code, ensuring full support for Mobile and Tablet.
+
+• Built RESTful APIs using Supabase Edge Functions for AI Agents, Chat, Reviews, and History.
+
+• Integrated AWS S3 and optimized large images, saving 90% of memory on mobile devices.
+
+• Connected OpenAI and Google Gemini APIs for Text and Image generation.
+
+• Connected APIs for Text-to-Speech, Subtitles, Reward Points, and Payments, handling secure data with JWT.
+
+• Enabled Google Cloud Platform APIs for real-time notifications and in-app purchase transactions.
+
+• Set up In-App Purchases using RevenueCat and webhooks to handle user points.
+
+• Integrated Push and In-App Notifications with Firebase (FCM).
+
+• Added Multi-language support (English, Thai, Indonesian).
+
+• Built features to download and share audio files directly to social apps.
+
+• Implemented secure Login (Google, Apple, LINE, Email) and Auto-login.
+
+• Integrated account management features (Register, Forgot Password, and Delete Account).
+
+• Automated deployment for Testing and Production using Fastlane, reducing time from 60 minutes to 5 minutes.
+
+• Handled the release process to App Store and Google Play in 175 countries.
