feat: Introduce contact modal and dynamic social links, update profile content and experience links, and adjust CMS configuration.

--- a/content/experience/2024-06-01-botnoi.md
+++ b/content/experience/2024-06-01-botnoi.md
@@ -6,10 +6,18 @@ startDate: Jun 2024
 current: true
 endDate: ""
 links:
-  - label: Apple App Store
+  - label: Botnoi Voice - Text to Speech on Apple App Store
     url: https://apps.apple.com/th/app/botnoi-voice-text-to-speech/id6670564712
-  - label: Google Play Store
+    platform: Apple
+  - label: Botnoi Voice - Text to Speech on Google Play Store
     url: https://play.google.com/store/apps/details?id=com.mobile.botnoivoice&pcampaignid=web_share
+    platform: Google
+  - label: AI Friend Hub on Apple App Store
+    url: https://apps.apple.com/th/app/ai-friend-hub/id6744385578
+    platform: Apple
+  - label: AI Friend Hub on Google Play Store
+    url: https://play.google.com/store/apps/details?id=com.botnoimobile.aifriendhub
+    platform: Google
 ---
 • Developed iOS and Android apps using Flutter on a single codebase.
 
